tests/cases/syntax/error/instance/instance-undefined.soccam
;; instance-undefined.soccam
;; Tests: 
(module instance-undefined soccam
  (proc foo ()
    (skip))
  
  (bar))
